--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,17 +10,50 @@
     <string name="cancel">Cancel</string>
     <string name="action_dictionaries">Slovníky</string>
     <string name="informations">Informace
-        V oddílu Slovníky Vokabuláře webového poskytujeme zájemcům o historickou češtinu informace o její slovní zásobě. Tvoří jej různorodé lexikální zdroje, které umožňují jednotné vyhledávání a listování, tj. procházení slovníkovými zdroji „po listech“. Poučení o způsobech, jakými lze dotaz formulovat, najde uživatel v Nápovědě.
+        V oddílu Slovníky Vokabuláře webového poskytujeme zájemcům o historickou češtinu informace o její slovní zásobě.
+        Tvoří jej různorodé lexikální zdroje, které umožňují jednotné vyhledávání a listování, tj. procházení
+        slovníkovými zdroji „po listech“. Poučení o způsobech, jakými lze dotaz formulovat, najde uživatel v Nápovědě.
 
-        Základ oddílu tvoří tato novodobá lexikografická díla pojednávající zejména o staročeské slovní zásobě: Elektronický slovník staré češtiny (ESSČ), Malý staročeský slovník (MSS), pracovní heslář k lístkové kartotéce Staročeského slovníku (HesStčS), Slovník staročeský Jana Gebauera (GbSlov), Staročeský slovník (StčS), Slovníček staré češtiny Františka Šimka (ŠimekSlov) a Index Slovníku staročeských osobních jmen Jana Svobody (IndexSvob).
+        Základ oddílu tvoří tato novodobá lexikografická díla pojednávající zejména o staročeské slovní zásobě:
+        Elektronický slovník staré češtiny (ESSČ), Malý staročeský slovník (MSS), pracovní heslář k lístkové kartotéce
+        Staročeského slovníku (HesStčS), Slovník staročeský Jana Gebauera (GbSlov), Staročeský slovník (StčS), Slovníček
+        staré češtiny Františka Šimka (ŠimekSlov) a Index Slovníku staročeských osobních jmen Jana Svobody (IndexSvob).
 
-        Jsou zde však též dostupné elektronické verze historických slovníků a podobných lexikografických příruček z období 16. až 19. století. Jedná se např. o Česko-německý slovnář Jana Václava Pohla, jehož elektronickou edici vytvořil se svými kolegy prof. Tilman Berger z univerzity v Tubinkách; dále Dodavky ke slovníku Josefa Jungmanna od F. L. Čelakovského; Slovář český Jana Františka Josefa Ryvoly a Deutsch-böhmisches Wörterbuch Josefa Dobrovského, Thesaurus Linguae Bohemicae Václava Jana Rosy a další slovníky, jejichž elektronické verze vznikají v oddělení vývoje jazyka ÚJČ a které primárně poskytují transliterovaný text, doplněný v některých případech o transkripci české jazykové části.
+        Jsou zde však též dostupné elektronické verze historických slovníků a podobných lexikografických příruček z
+        období 16. až 19. století. Jedná se např. o Česko-německý slovnář Jana Václava Pohla, jehož elektronickou edici
+        vytvořil se svými kolegy prof. Tilman Berger z univerzity v Tubinkách; dále Dodavky ke slovníku Josefa Jungmanna
+        od F. L. Čelakovského; Slovář český Jana Františka Josefa Ryvoly a Deutsch-böhmisches Wörterbuch Josefa
+        Dobrovského, Thesaurus Linguae Bohemicae Václava Jana Rosy a další slovníky, jejichž elektronické verze vznikají
+        v oddělení vývoje jazyka ÚJČ a které primárně poskytují transliterovaný text, doplněný v některých případech o
+        transkripci české jazykové části.
 
-        Formou digitalizovaných obrazů doplněných o metainformace (soupis hesel a podheslí) zveřejňujeme Slovník česko-německý Josefa Jungmanna. Jedná se o fotokopie archivního exempláře, v němž sám autor označoval opravy a doplňky textu pro zamýšlené druhé vydání slovníku. Digitální kopii lze prohlížet dvěma způsoby: pomocí listování a vyhledávání v heslových slovech a podheslích, a to podle transliterované i transkribované podoby.
+        Formou digitalizovaných obrazů doplněných o metainformace (soupis hesel a podheslí) zveřejňujeme Slovník
+        česko-německý Josefa Jungmanna. Jedná se o fotokopie archivního exempláře, v němž sám autor označoval opravy a
+        doplňky textu pro zamýšlené druhé vydání slovníku. Digitální kopii lze prohlížet dvěma způsoby: pomocí listování
+        a vyhledávání v heslových slovech a podheslích, a to podle transliterované i transkribované podoby.
 
-        Informace získané vyhledáváním či listováním se liší v závislosti na zdroji, z něhož jsou čerpány – slovníky poskytnou heslovou stať, heslář ke kartotéce Staročeského slovníku pochopitelně pouze samotný výraz bez dalšího lexikografického zpracování apod. Získané údaje lze archivovat v tiskové verzi.
+        Informace získané vyhledáváním či listováním se liší v závislosti na zdroji, z něhož jsou čerpány – slovníky
+        poskytnou heslovou stať, heslář ke kartotéce Staročeského slovníku pochopitelně pouze samotný výraz bez dalšího
+        lexikografického zpracování apod. Získané údaje lze archivovat v tiskové verzi.
 
-        Elektronický slovník staré češtiny, Staročeský slovník i heslář ke kartotéce Staročeského slovníku jsou díla vzniklá (či vznikající) na půdě oddělení vývoje jazyka ÚJČ; na vzniku Indexu staročeských osobních jmen Jana Svobody se podíleli pracovníci ÚJČ PhDr. Libuše Olivová-Nezbedová, CSc., a doc. PhDr. &amp; RNDr. Karel Oliva, Dr. Za možnost zapojit do Vokabuláře webového elektronickou verzi Malého staročeského slovníku děkujeme autorům či nositelům autorských práv k tomuto dílu, jmenovitě prof. PhDr. Karlu Kučerovi, CSc., doc. PhDr. Heleně Běličové, DrSc., a prof. PhDr. Karlu Kamišovi, CSc., kteří našemu záměru laskavě vyšli vstříc. Za souhlas s uveřejněním dodatku k Malému staročeskému slovníku, tj. stati Václava Křístka o staročeských pravopisných systémech, děkujeme nositelce autorských práv k uvedené práci PhDr. Marii Bělíkové. Stejně tak patří naše poděkování Středisku Teiresiás, zastoupenému PhDr. Petrem Peňázem, které nám poskytlo Malý staročeský slovník v elektronické formě.
+        Elektronický slovník staré češtiny, Staročeský slovník i heslář ke kartotéce Staročeského slovníku jsou díla
+        vzniklá (či vznikající) na půdě oddělení vývoje jazyka ÚJČ; na vzniku Indexu staročeských osobních jmen Jana
+        Svobody se podíleli pracovníci ÚJČ PhDr. Libuše Olivová-Nezbedová, CSc., a doc. PhDr. &amp; RNDr. Karel Oliva,
+        Dr. Za možnost zapojit do Vokabuláře webového elektronickou verzi Malého staročeského slovníku děkujeme autorům
+        či nositelům autorských práv k tomuto dílu, jmenovitě prof. PhDr. Karlu Kučerovi, CSc., doc. PhDr. Heleně
+        Běličové, DrSc., a prof. PhDr. Karlu Kamišovi, CSc., kteří našemu záměru laskavě vyšli vstříc. Za souhlas s
+        uveřejněním dodatku k Malému staročeskému slovníku, tj. stati Václava Křístka o staročeských pravopisných
+        systémech, děkujeme nositelce autorských práv k uvedené práci PhDr. Marii Bělíkové. Stejně tak patří naše
+        poděkování Středisku Teiresiás, zastoupenému PhDr. Petrem Peňázem, které nám poskytlo Malý staročeský slovník v
+        elektronické formě.
 
-        Obrazové i textové materiály jsou vystaveny pouze pro studijní a badatelské účely a nelze rozšiřovat jakoukoliv jejich část, ať již samostatně, či v rámci jiného projektu. V případě zájmu nás kontaktujte elektronicky na adrese vokabular@ujc.cas.cz nebo písemně: oddělení vývoje jazyka, Ústav pro jazyk český AV ČR, v. v. i., Valentinská 1, 116 46, Praha 1. Veškeré přejímané informace podléhají citačnímu úzu vědecké literatury.</string>
+        Obrazové i textové materiály jsou vystaveny pouze pro studijní a badatelské účely a nelze rozšiřovat jakoukoliv
+        jejich část, ať již samostatně, či v rámci jiného projektu. V případě zájmu nás kontaktujte elektronicky na
+        adrese vokabular@ujc.cas.cz nebo písemně: oddělení vývoje jazyka, Ústav pro jazyk český AV ČR, v. v. i.,
+        Valentinská 1, 116 46, Praha 1. Veškeré přejímané informace podléhají citačnímu úzu vědecké literatury.
+    </string>
+
+    <string name="title_activity_image_full_screen">ImageFullScreen</string>
+    <string name="dummy_button">Dummy Button</string>
+    <string name="dummy_content">DUMMY\nCONTENT</string>
 </resources>
